--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </li>
               <li>
                 <a href="#" class="icon brands fa-github
-                  ><span class="label">Github</span></a
+                  ><span class="label"></span></a
                 >
               </li>
             </ul>
@@ -67,6 +67,7 @@
               <h2>Latest Projects</h2>
             </header>
             <div class="posts">
+				<!-- Project 1 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic01.jpg" alt=""
@@ -81,6 +82,8 @@
                   <li><a href="#" class="button">More</a></li>
                 </ul>
               </article>
+
+			  <!-- Project 2 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic02.jpg" alt=""
@@ -95,6 +98,8 @@
                   <li><a href="#" class="button">More</a></li>
                 </ul>
               </article>
+
+			  <!-- Project 3 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic03.jpg" alt=""
@@ -109,6 +114,8 @@
                   <li><a href="#" class="button">More</a></li>
                 </ul>
               </article>
+
+			  <!-- Project 4 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic04.jpg" alt=""
@@ -123,6 +130,8 @@
                   <li><a href="#" class="button">More</a></li>
                 </ul>
               </article>
+
+			  <!-- Project 5 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic05.jpg" alt=""
@@ -137,6 +146,8 @@
                   <li><a href="#" class="button">More</a></li>
                 </ul>
               </article>
+
+			  <!-- Project 6 -->
               <article>
                 <a href="#" class="image"
                   ><img src="images/pic06.jpg" alt=""
